--- a/_posts/2020-06-02-이항계수2.md
+++ b/_posts/2020-06-02-이항계수2.md
@@ -1,3 +1,36 @@
+# 11051번 이항 계수 2
+
+| 시간 제한 | 메모리 제한 | 제출  | 정답 | 맞은 사람 | 정답 비율 |
+| :-------- | :---------- | :---- | :--- | :-------- | :-------- |
+| 1 초      | 256 MB      | 20964 | 7861 | 6174      | 38.960%   |
+
+## 문제
+
+자연수 N과 정수 K가 주어졌을 때 이항 계수 (NK)를 10,007로 나눈 나머지를 구하는 프로그램을 작성하시오.
+
+## 입력
+
+첫째 줄에 N과 K가 주어진다. (1 ≤ N ≤ 1,000, 0 ≤ K ≤ N)
+
+## 출력
+
+ (NK)를 10,007로 나눈 나머지를 출력한다.
+
+## 예제 입력 1 
+
+```
+5 2
+```
+
+## 예제 출력 1 복사
+
+```
+10
+```
+
+## 나의 코드
+
+```
 package DivideAndConquer;
 
 import java.io.*;
@@ -23,7 +56,7 @@ public class n11401_이항계수3 {
 		k = stoi(st.nextToken());
 	
 		if(n == 0 || k == 0) {
-			System.out.println(0);
+			System.out.println(1);
 		}else {
 			System.out.println(binomial(n,k));
 		}
@@ -40,5 +73,6 @@ public class n11401_이항계수3 {
 		
 		return (memo[n-1][k] + memo[n-1][k-1])%MOD;
 	}
-
 }
+```
+
